# cbir-toolbox

cnn/: extract_dir.py  extract_spp.py
cnn/conv_model/: conv.prototxt
colorcorrelogram/: CMakeLists.txt
colorcorrelogram/src/: CMakeLists.txt  ColorCorrelogram.cpp  ColorCorrelogram.h  ColorQuantization.cpp  ColorQuantization.h  VideoColor.cpp  main.cpp
csift/: CMakeLists.txt
csift/src/: CMakeLists.txt  CSift.cpp  Csiftfeature.cpp  Csiftfeature.h  imgfeatures.h  utils.cpp  utils.h
matlab_scripts/eval_ukbench/: eval_hld.m  eval_ukb_vlad.m  preprocess_cnn_feats.m  white_feat.m
matlab_scripts/utils/: .directory  cat0.m  compute_cdm.m  compute_relationships.m  dbexpansion_nn.m  eval_hld.m  eval_hld_2feats.m  eval_hld_cdm.m  eval_hld_hello_neighbor.m  hsift_read.m  inspect_ub.m  lle.m  norm_feature.m  pr_hld.m  prec_hld.m  read_hello_neighbor.m  read_hld_feats.m  read_ub_feats.m  recall_hld.m  siftgeo_read.m  ukb_ns.m  ukb_ns_cdm.m  write_hello_neighbor.m  write_ub_analyze.m
siftgeo/: ReadMe.md  batch.sh  proc.sh  proc_bmp.sh  test_matchSIFT.m
vlad/: CMakeLists.txt
vlad/src/: CMakeLists.txt  SiftReader.cpp  SiftReader.h  Vlad.cpp  Vlad.h  main.cpp
