CMAKE_MINIMUM_REQUIRED (VERSION 2.8)
IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
  SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin-dbg)
  ADD_DEFINITIONS("-std=c++0x -O0 -Wall -g -ggdb -fopenmp")
ELSE()
  SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
  ADD_DEFINITIONS("-std=c++0x -O3 -Wall -fopenmp")
ENDIF()
PROJECT(VLAD)
ADD_SUBDIRECTORY(src) 
